testsuite/tests/ghc-cpp/GhcCpp02.stderr
GhcCpp02.hs:5:1: error: [GHC-93098] #else without #if

GhcCpp02.hs:7:1: error: [GHC-93098] #endif without #if

GhcCpp02.hs:12:1: error: [GHC-93098]
    Error evaluating CPP condition:
      Parse error at line 1, column 23 of
      2 + NONEXISTENT_MACRO ( 4 )
      expanded from:
      EXISTENT_MACRO( 4 )

GhcCpp02.hs:17:1: error: [GHC-93098]
    CPP macro expansion limit hit: FOO( 3 )

GhcCpp02.hs:21:1: error: [GHC-93098]
    CPP defined: expected an identifier, got: 34

GhcCpp02.hs:24:1: error: [GHC-93098]
    CPP defined: expected a single arg, got: A,B

